# image_conventor

./: Dockerfile  README.md  db.sqlite3  pyproject.toml  статья_Чернов.docx
.github/workflows/: test.yml
convertor/: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  git.env  urls.py
convertor/convertor/: settings.py
convertor/main_app/: forms.py  models.py  serializers.py  test_models.py  test_views.py  urls.py  views.py
convertor/main_app/migrations/: 0001_initial.py
convertor/main_app/templates/: get_result.html  load_img.html
convertor/static/css/: styles.css
convertor/templates/: base.html
main_app/: forms.py  models.py  serializers.py  test_api.py  test_forms.py  test_models.py  test_views.py  urls.py  views.py
main_app/templates/: load_img.html  main.html
static/css/: styles.css
